<resources>
    <string name="app_name">tooltip_task</string>
    <string name="render_tooltip">Render Tooltip</string>
    <string name="tooltip_text">Tooltip Text</string>
    <string name="tooltip_width_in_dp">Tooltip Width (in dp)</string>
    <string name="_10">10</string>
    <string name="tooltip_text_size">Tooltip Text Size</string>
    <string name="_8">8</string>
    <string name="pick_ntext_color">Pick \nText Color</string>
    <string name="background_ncolor">Background \nColor</string>
    <string name="pick_button_number">Target Element</string>
    <string name="button_1">Btn 1</string>
    <string name="button_2">Btn 2</string>
    <string name="button_3">Btn 3</string>
    <string name="button_4">Btn 4</string>
    <string name="button_5">Btn 5</string>
    <string name="select_image">Select Image</string>
</resources>