<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#D9D9D9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PreviewActivity">

    <Button

        android:id="@+id/button"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/button_1"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/button_2"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:text="@string/button_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:text="@string/button_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:text="@string/button_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>