<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F5F5F5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRenderTooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/render_tooltip"
        android:backgroundTint="#0958D9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTooltipText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tooltip_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:background="@drawable/roundcorner"
            android:id="@+id/editTextTooltipText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginTop="10dp"
        android:id="@+id/textViewPickPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Position"
        android:layout_marginBottom="1dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTooltipText"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTooltipPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
    <Spinner

        android:id="@+id/spinnerTooltipPosition"
        android:background="@drawable/spinner_bg"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPickPosition" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTooltipWidth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tooltip_width_in_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTooltipPosition">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/roundcorner"
            android:id="@+id/editTextTooltipWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="150" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTextSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tooltip_text_size"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTooltipWidth">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/roundcorner"
            android:id="@+id/editTextTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/_10" />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayoutPadding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:hint="Padding"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTooltipWidth">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/roundcorner"
            android:id="@+id/editTextTooltipPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/_8" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTextColorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="112dp"
        app:cornerRadius="4dp"
        android:text="@string/pick_ntext_color"
        android:backgroundTint="#0958D9"
        app:layout_constraintEnd_toEndOf="@id/guidelineCenter"
        app:layout_constraintEnd_toStartOf="@+id/buttonBackgroundColorPicker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTextSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBackgroundColorPicker"
        android:layout_width="wrap_content"
        app:cornerRadius="4dp"

        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/background_ncolor"
        android:backgroundTint="#0958D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelectButton"
        app:layout_constraintTop_toTopOf="@id/buttonTextColorPicker" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewPickButtonNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_button_number"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSelectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner

        android:background="@drawable/spinner_bg"
        android:id="@+id/spinnerSelectButton"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTextSize" />


</androidx.constraintlayout.widget.ConstraintLayout>
